--- a/res/layout/activity_b.xml
+++ b/res/layout/activity_b.xml
@@ -11,6 +11,6 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="android_fans" />
+        android:text="开玩笑，这可是提升了一百倍的性能哇，颤抖吧凡人！" />
 
 </RelativeLayout>
